fixing the button color, make it white when under dark mode

--- a/assets/css/nav-styles.css
+++ b/assets/css/nav-styles.css
@@ -24,6 +24,11 @@
 [data-theme='dark'] .navbar ul{
   background-color: #343a40;
 }
+
+[data-theme='dark'] .navbar button{
+  color: #ffff;
+}
+
 /*Maneging navbar as per theme ends*/
 
 .navbar {
